fixed hovered navbar spacings

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,7 +34,7 @@ html {
 display: block;
 color: white;
 font-size: 1vw;
-padding: 8px 2vw;
+padding: 2vh 2vw;
 text-decoration: none;
 }
 
